# rtcamp2025-vcpkg-tutorials

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mise.toml  vcpkg-configuration.json  vcpkg.json
include/: hello.h
src/: main.cpp
vcpkg/ports/fpng/: CMakeLists.txt  fpng-config.cmake.in  portfile.cmake  vcpkg.json
